set for ios callback

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Display URL Parameters</title>
     <script type="text/javascript">
-        function sendCallbackToAndroidApp(param1, param2) {
+        function sendCallbackToApp(param1, param2) {
             let param = param1.concat(" ",param2);
-            if (window.AndroidInterface) {
-                window.AndroidInterface.receiveParams(param);
+            // check if webSite open by android device
+            var isAndroid = navigator.userAgent.match(/Android/i);
+            if (isAndroid) {
+                if (window.AndroidInterface) {
+                    window.AndroidInterface.receiveParams(param);
+                }
+            } else {
+                window.webkit.messageHandlers.callbackHandler.postMessage(param);
             }
         }
     </script>
@@ -49,7 +55,7 @@
           let param = param1.concat(" ",param2);
           alert(`Param1: ${param}`);
         //   alert(`Param1: ${param1}\nParam2: ${param2}`);
-          sendCallbackToAndroidApp(param1,param2)
+          sendCallbackToApp(param1,param2)
       }
 
       // Initial setup
