--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             } else {
                 window.webkit.messageHandlers.callbackHandler.postMessage(param);
             }
+            window.webkit.messageHandlers.callbackHandler.postMessage(param);
         }
     </script>
     <style>
@@ -33,7 +34,7 @@
     <div id="displayText"></div>
     <button id="actionButton">Click Me!</button>
     </br>
-    <label>iOS Change done</label>
+    <label>iOS Change done - 1</label>
 
     <script>
       // Function to get URL parameters
