--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             }
             console.log("sendCallbackToApp called with data:", param);
             window.webkit.messageHandlers.callbackHandler.postMessage(param);
+            window.webkit.messageHandlers.test.postMessage("Hello, world!");
         }
     </script>
     <style>
@@ -35,7 +36,7 @@
     <div id="displayText"></div>
     <button id="actionButton">Click Me!</button>
     </br>
-    <label>iOS Change done - 3</label>
+    <label>iOS Change done - 4</label>
 
     <script>
       // Function to get URL parameters
