--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 // window.webkit.messageHandlers.callbackHandler.postMessage(param);
             }
             console.log("sendCallbackToApp called with data:", param);
-            // window.webkit.messageHandlers.callbackHandler.postMessage(param);
-            window.webkit.messageHandlers.test.postMessage("Hello, world!");
+            window.webkit.messageHandlers.callbackHandler.postMessage(param);
+            // window.webkit.messageHandlers.test.postMessage("Hello, world!");
         }
     </script>
     <style>
@@ -36,7 +36,7 @@
     <div id="displayText"></div>
     <button id="actionButton">Click Me!</button>
     </br>
-    <label>iOS Change done - 5</label>
+    <label>iOS Change done - 6</label>
 
     <script>
       // Function to get URL parameters
